# python-backend-template

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  TODO.md  alembic.ini  compose.yaml  pyproject.toml
src/: main.py
src/api/: router.py
src/api/dependencies/: db.py  error_handlers.py  third_party.py
src/api/routes/: auth_routes.py  health_routes.py  user_routes.py
src/api/schemas/: auth_schemas.py  base.py  error_schemas.py  examples.py  user_schemas.py
src/application/: app.py
src/data/factories/: user_factory.py
src/data/migrations/: env.py
src/data/migrations/versions/: 70a9eff87f70_add_user_table.py
src/data/models/: __init__.py  base.py  user_model.py
src/data/repositories/: user_repository.py
src/domain/entities/: user.py  user_entities.py
src/domain/exceptions/: base.py  third_party.py  user_exceptions.py
src/domain/ports/: user_name_generator.py  user_repository.py
src/domain/repositories/: user_repository.py
src/domain/services/: auth_service.py  user_service.py
src/infrastructure/: config.py  database.py  postgres.py
tests/: conftest.py
tests/e2e/: test_auth_routes.py  test_users.py  test_users_generate.py
