[project]
name = "python-backend-template"
version = "0.1.0"
description = "Backend Template"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "sqlalchemy>=2.0.46",
    "psycopg2-binary>=2.9.9",
    "google-genai>=1.64.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
